tests/toy/neg/001509_mutation.toylang
program a = { var a then : bool; } .
